# cadlab

./: README.md  anaconda-project.yml  azure-pipelines.yml  environment.yml
cadlab/: LICENSE  README.md  setup.cfg
cadlab/src/cadlab/: __init__.py
ci/: steps.common.yml
constructor/: construct.yaml.in
recipes/cadlab/: meta.yaml
recipes/importnb/: meta.yaml
recipes/itkwidgets/: meta.yaml  setup.py.nojs.patch
recipes/openmdao/: meta.yaml
recipes/pyoptsparse/: meta.yaml
recipes/testflo/: meta.yaml
scripts/: __init__.py  build.py  lint.py
tests/acceptance/: __init__.robot
tests/acceptance/RobotLab/: 00_Smoke_Test.robot  01_IPython_Notebook.robot  02_Robot_Notebook.robot  __init__.robot
tests/resources/: Install.robot  Launch.robot  Shell.robot
