[metadata]
name = cadlab
version = 0.1.0
description = A pre-configured JupyterLab for demonstrating cadquery
long_description = file: README.md
url = https://github.com/bollwyvl/cadlab
author = Nick Bollweg
author_email = nick.bollweg@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Interpreter
    Shell
    Testing
    Web
    Jupyter
    JupyterLab
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only

[options.entry_points]
console_scripts =
    cadlab = cadlab.labapp:main
    cadlab-extension = cadlab.labextensionapp:main

[options]
install_requires =
    jupyterlab
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src
